<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/atardecercorto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <AutoCompleteTextView
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnRegistrar"
        android:layout_alignLeft="@+id/btnRegistrar"
        android:layout_alignEnd="@+id/btnRegistrar"
        android:layout_alignRight="@+id/btnRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="310dp"
        android:background="@drawable/et_introducir_datos"
        android:gravity="left"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etEmail"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="0dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/et_introducir_datos"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:shadowColor="@color/white"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnVacio"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/boton_crear_cuenta"
        android:onClick="crearCuenta"
        android:text="@string/btncuenta"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:background="@drawable/boton_entrar"
        android:onClick="acceder"
        android:text="@string/btnentrar"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewSubrayado"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnVacio"
        android:layout_gravity="center"
        android:layout_marginEnd="-38dp"
        android:layout_toStartOf="@+id/etEmail"
        android:paddingBottom="16dp"
        android:text="@string/text_subrayado"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="-9dp"
        android:gravity="center_horizontal"
        android:text="@string/vitapat"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>