<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/atardecercorto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity">

    <!-- Login progress -->

    <EditText
        android:id="@+id/etContraseña2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:background="@drawable/et_introducir_datos"
        android:hint="@string/et_Confirmar"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:shadowColor="@color/white"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <AutoCompleteTextView
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="291dp"
        android:background="@drawable/et_introducir_datos"
        android:gravity="left"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="341dp"
        android:background="@drawable/et_introducir_datos"
        android:hint="@string/et_usuario"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:shadowColor="@color/white"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="241dp"
        android:background="@drawable/et_introducir_datos"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/magins"
        android:shadowColor="@color/white"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnVacio"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/boton_crear_cuenta"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/boton_crear_cuenta"
        android:text="@string/btn_atras"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="128dp"
        android:background="@drawable/boton_entrar"
        android:onClick="acceder"
        android:text="@string/btnRegistrar"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="-9dp"
        android:gravity="center_horizontal"
        android:text="@string/vitapat"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>